<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/view_layout_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_saved_answers"
        style="@style/AppMainTextView.Title"
        android:text="@string/saved_answers"
        app:layout_constraintBottom_toTopOf="@id/saved_answers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/saved_answers"
        style="@style/AppMainTextView"
        android:maxLines="5"
        app:layout_constraintBottom_toTopOf="@id/title_current_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_saved_answers"
        tools:text="1\n2\n3\n4\n5" />

    <TextView
        android:id="@+id/title_current_answer"
        style="@style/AppMainTextView.Title"
        android:text="@string/title_current_answer"
        app:layout_constraintBottom_toTopOf="@id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saved_answers" />

    <TextView
        android:id="@+id/current_answer"
        style="@style/AppMainTextView"
        app:layout_constraintBottom_toBottomOf="@id/save_button"
        app:layout_constraintEnd_toStartOf="@id/save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/save_button"
        tools:text="25" />

    <Button
        android:id="@+id/save_button"
        style="@style/AppMainButtons"
        android:text="@string/button_save_answer"
        app:layout_constraintBottom_toTopOf="@id/calculator_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/current_answer"
        app:layout_constraintTop_toBottomOf="@id/title_current_answer" />

    <Button
        android:id="@+id/calculator_button"
        style="@style/AppMainButtons"
        android:text="@string/button_calculator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save_button" />
</androidx.constraintlayout.widget.ConstraintLayout>